kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joke-client
  namespace: rjoke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joke-client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: joke-client
    spec:
      containers:
      - name: joke-client
        image: rachelallen1/joke-client-web-student:${IMAGE_TAG}
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
