kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: joke-client-service
  namespace: rjoke
spec:
  selector:
    app: joke-client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
