kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joke-client-ingress
  namespace: rjoke
spec:
  rules:
  - host: rachelrecipe.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joke-client-service
            port:
              number: 80
